--- a/Developmenthub_Website/HubMaster.Master
+++ b/Developmenthub_Website/HubMaster.Master
@@ -76,7 +76,7 @@
                         <div class="col-md-5">
                             <h4 class="contact-address">Contact Address</h4>
                             <address class="contact-address">
-                                13 Dlilanga Street<br />
+                                13 Dlilanga Street Details<br />
                                 Ikwezi Township<br />
                                 Mthatha<br />
                                 5099
