--- a/Developmenthub_Website/Resources/DevStyle/Dev_StyleSheet_Main.css
+++ b/Developmenthub_Website/Resources/DevStyle/Dev_StyleSheet_Main.css
@@ -8,12 +8,139 @@
 {
     padding:0px;
 }
+/*Layout Styles*/
+h4.heading {
+	font-weight:700;
+}
+
+.heading { margin-bottom: 30px; }
+
+.heading {
+	position: relative;
+	
+}
+.container {
+	padding:0 20px 0 20px;
+	position:relative;
+}
+
+#wrapper{
+	width:100%;
+	margin:0;	
+	padding:0;
+}
+
+h1,h2, h3, h4, h5, h6 {
+	font-family:'Open Sans', Arial, sans-serif;
+	font-weight:700;
+	line-height:1.1em;
+	color:#333;
+	margin-bottom: 20px;
+}
+.row,.row-fluid {
+	margin-bottom:30px;
+}
+
+.row .row,.row-fluid .row-fluid{
+	margin-bottom:30px;
+}
+
+.row.nomargin,.row-fluid.nomargin {
+	margin-bottom:0;
+}
+/*----------------------------------------------------------------------*/
+/*Position and Alignment*/
+.aligncenter{
+	text-align:center;
+}
+.aligncenter span{
+	margin-left:0;
+}
+
+/*----------------------------------------*/
+/*Content Styles*/
+
+#content {
+	position:relative;
+	background:#fff;
+	padding:50px 0 40px 0;
+}
+
+#content img {
+	max-width:100%;
+	height:auto;
+}
+
+/* --- Call to action --- */
+
+.cta-text h2 span {
+	color: #68A4C4;
+}
+.cta-text {
+	text-align: center;
+	margin-top:10px;
+}
+ul.clients li:hover {
+	border:4px solid #68A4C4;
+}
+.big-cta .cta {
+	margin-top:10px;
+}
+
+/* --- box --- */
+
+.box {
+	width: 100%;
+    border-bottom:1px solid #e9e9e9;
+	padding-bottom:20px;
+   
+}
+.box-gray  {
+	background: #f8f8f8;
+	padding: 20px 20px 30px;
+}
+.box-gray  h5,.box-gray  i {
+	margin-bottom: 20px;
+}
+.box-bottom {
+	padding: 20px 0;
+	text-align: center;
+    background:#302F2E;
+}
+.box-bottom a {
+	color: #fff;
+	font-weight: 700;
+}
+.box-bottom a:hover {
+	color: #eee;
+	text-decoration: none;
+}
+
+/*------------------------------------------------------------------------------------------*/
+/* fontawesome icons */
+.icon-square:hover,
+.icon-rounded:hover,
+.icon-circled:hover {
+    background-color: #68A4C4;
+}
+[class^="icon-"].active,
+[class*=" icon-"].active {
+    background-color: #68A4C4;
+}
+/*---------------------------------------------------------------------------*/
+
+.solidline {
+	border-top:1px solid #f5f5f5;
+	margin:0 0 30px;
+}
+
+/*Footer Styles*/
 .site-footer 
 {
     background-color:#222;
     color:#fff;
-    margin-top:30px;
-    padding:30px;
+    margin-top:20px;
+    padding:20px;
 }
 .bottom-footer 
 {
@@ -47,3 +174,4 @@
         color:#fff;
         text-decoration:none;
     }
+    /*---------------------------------------------------------------------------------------------*/
