Contact Us design done - Validation needed

--- a/Developmenthub_Website/HubMaster.Master
+++ b/Developmenthub_Website/HubMaster.Master
@@ -46,7 +46,7 @@
                         <li><a href="index.aspx">Home</a></li>
                         <li><a href="Services.aspx">Services</a></li>
                         <li><a href="Portfolio.aspx">Portfolio</a></li>
-                        <li><a href="contact.aspx">Contact Us</a></li>
+                        <li><a href="ContactFinal.aspx">Contact Us</a></li>
 
                         
                         
